# bbcar_stw_adc

./: .gitmodules  README.md
hardware/: README.md
hardware/bbcar_stw_adc/: CAN.sch  CAN.sch-bak  Display_Conn.sch-bak  ESP32.sch  ESP32.sch-bak  HSE_Crystal.sch-bak  Potis.sch  Power3V3.sch-bak  STM32.sch-bak  bbcar_stw_adc-cache.lib  bbcar_stw_adc.bck  bbcar_stw_adc.csv  bbcar_stw_adc.dcm  bbcar_stw_adc.kicad_pcb  bbcar_stw_adc.kicad_pcb-bak  bbcar_stw_adc.lib  bbcar_stw_adc.pro  bbcar_stw_adc.sch-bak  bbcar_stw_adc.xml  fp-info-cache  fp-lib-table  sym-lib-table
hardware/bbcar_stw_adc/bbcar_stw_adc.pretty/: Crystal_SMD_Abracon_ABMM2-4Pin_6.0x3.6mm.kicad_mod  D_SOD-123W.kicad_mod
hardware/common/symbols/: esdcan05-2bwy.lib
software/: CMakeLists.txt  STM32G431KBUx_FLASH.ld
software/Inc/: can.h  can_fc.h  can_feedc0de.h  config.h  cruise_controller.h  debouncer.h  main.h  serial_esp.h  serial_feedc0de.h  stm32g4xx_hal_conf.h
software/Src/: can.c  can_feedc0de.cpp  main.cpp  serial_esp.c  serial_feedc0de.cpp  stm32g4xx_hal_msp.c  stm32g4xx_it.c
